# vector2mcap

./: CLAUDE.md  PLAN.md  README.md  default.nix  flake.nix  pyproject.toml
src/vector2mcap/: __main__.py  cli.py  converter.py  event_pb2.py  file_reader.py  json_to_protobuf.py  mcap_writer.py
tests/: __init__.py  test_cli.py  test_data.jsonl  test_file_reader.py  test_json_to_protobuf.py  test_mcap_validation.py
tests/test_data/: combined.mcap  test1.out  test2.out  test_output.mcap  test_output2.mcap
